--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "setup": "max setup",
     "start": "npm run dev"
   },
+  "eslintConfig": {
+    "rules": {
+      "semi": [
+        "error"
+      ]
+    }
+  },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.3",
     "@umijs/max": "^4.0.9",
-    "antd": "^4.20.7"
+    "antd": "^4.20.7",
+    "echarts": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
