--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "name": "web-back",
   "private": true,
   "author": "Chiayen <932886099@qq.com>",
   "scripts": {
-    "build": "max build",
+    "build": "cross-env ANALYZE=1 max build",
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
+    "openapi": "max openapi",
     "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev"
@@ -14,10 +16,15 @@
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.3",
     "@umijs/max": "^4.0.9",
+    "@umijs/max-plugin-openapi": "^1.0.5",
     "antd": "^4.20.7",
-    "echarts": "^5.3.3"
+    "dayjs": "^1.11.5",
+    "echarts": "^5.3.3",
+    "lodash": "^4.17.21",
+    "swagger-ui-react": "^4.13.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.183",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "husky": "^8.0.1",
